# 1990sclassichits

./: .cache  1990shitsDNAproject.ipynb  README.md  Untitled.ipynb  d3_final.csv  followers_from_spotify.ipynb  pyproject.toml  recognition_by_generation.csv  requirements.txt  untitled.py
.ipynb_checkpoints/: 1990shitsDNAproject-checkpoint.ipynb
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
notebooks/: .cache  1990shitsDNAproject.ipynb  Untitled.ipynb  d3_final.csv  followers_from_spotify.ipynb  load_data_bana.ipynb  projet_test_copy 2.ipynb  projet_test_copy.ipynb
notebooks/.ipynb_checkpoints/: 1990shitsDNAproject-checkpoint.ipynb
notebooks/copy des Project zu sicherheit/: copy1990shitsDNAproject.ipynb
src/1990sclassichits/: __init__.py
