[project]
name = "1990sclassichits"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1.0",
    "pandas>=2.2.2",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.5",
    "matplot>=0.1.9",
    "lib>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
